Add get device updates endpoint
